[tool.poetry]
name = "pyaml-processor"
version = "0.3.0"
description = "Library for embedding Python code in YAML."
homepage = "https://github.com/gwww/pyaml"
authors = ["Glenn Waters <gwwaters+pyaml@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
]
include = ["CHANGELOG.md", "bin/**/*"]
exclude = ["test"]

[tool.poetry.dependencies]
python = "^3.6"
PyYAML = "^5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
mock = "^4.0"
pytest-mock = "^3.1"
colorlog = "^4.0"
watchdog = "^0.10"
black = "^19.10b0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
